[gd_scene load_steps=2 format=3 uid="uid://cy4ijjujk4eh7"]

[ext_resource type="Script" path="res://scripts/systems/UI/settings/controls.gd" id="1_qqmir"]

[node name="PanelContainer" type="PanelContainer"]
script = ExtResource("1_qqmir")

[node name="ControlsMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ControlsOptions" type="VBoxContainer" parent="ControlsMarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="ControlsMarginContainer/ControlsOptions"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="ControlsMarginContainer/ControlsOptions/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
